updates docs to mkdocs

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,9 +1,14 @@
 site_name: jintonic
 repo_url: https://github.com/inegm/jintonic
 nav:
-  - jintonic: "index.md"
+  - about: "index.md"
   - API:
       - chords: "api/chords.md"
+      - harmonics: "api/harmonics.md"
+      - intervals: "api/intervals.md"
+      - lattice: "api/lattice.md"
+      - primes: "api/primes.md"
+      - scales: "api/scales.md"
 theme:
   name: material
   features:
@@ -11,6 +16,10 @@ theme:
     - navigation.tracking
     - navigation.sections
     - navigation.expand
+  palette:
+    scheme: default
+    primary: black
+    accent: indigo
 plugins:
   - search
   - mkdocstrings:
