--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -6,7 +6,7 @@ on:
 permissions:
   contents: write
 jobs:
-  deploy:
+  publish-docs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
