--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -20,5 +20,6 @@ jobs:
           path: .cache
           restore-keys: |
             mkdocs-material-
+      - run: pip install .
       - run: pip install mkdocs-material "mkdocstrings[python]"
       - run: mkdocs gh-deploy --force
