--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,3 +19,7 @@ jobs:
       - run: pip install -r requirements_dev.txt
       - run: make checks
       - run: make tests
+      - uses: codecov/codecov-action@v3
+        with: 
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+        name: Upload coverage reports to Codecov
